add role function Check